@@ -9,8 +9,9 @@ CHANGELOG
 * Testrunner cleanup
 * Fix many regressions and bugs in Django 1.8/1.9
 * Admin UI enhancements
-* Hides related widget wrapper links
+* Hide related widget wrapper links
 * Fix cancel link in delete confirmation
+* Make BaseImage.subject_location field non-nullable
 
 
 1.1.1 (2016-01-27)
